--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,170 @@
-.header {
-  background-color: skyblue;
-  display: flex;
-  height: 80px;
-  justify-content: space-between;
-  align-items: center;
+/* 색상 정의 */
+:root {
+  --background-color-main-card : violet;
+  --background-color-main-card-container : skyblue;
+  --background-color-list-box : lightgreen;
+  --background-color-text-btn : gray;
+  --background-color-caution-box : ivory;
+  --color-text-btn : white;
+  --color-caution-text : rgb(143, 143, 143);
 }
 
-.icon {
-  width: 50px;
-  height: 50px;
-  background-color: red;
-}
-
-.head_menu {
-  display: flex;
-  list-style-type: none;
-}
-
-main {
-  background-color: violet;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.section1, .section2, .section3, .section4 {
+/* text-btn 시작 */
+.text-btn {
+  background-color: var(--background-color-text-btn);
+  color: var(--color-text-btn);
+  padding: 5px 10px;
+  margin: 1% 0;
+  text-align: center;
+  text-decoration: none;
   display: inline-block;
-  background-color: lightgreen;
-  height: 38vh;
+}
+/* text-btn 끝 */
+
+/* main-card 시작 */
+.main-card {
+  width: 310px; 
+  height: 530px;
+  background-color: var(--background-color-main-card);
+  border-radius: 30px;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+}
+
+.main-card img {
+  width: 310px;
+  height: 530px;
+}
+
+.main-card:hover {
+  cursor: pointer;
+}
+
+.main-card:hover .main-card-info-box {
+    transform: scale(1);
+}
+
+.main-card .main-card-info-box {
+  position: relative;
+  width: 310px;
+  height: 530px;
+  background-color: var(--background-color-main-card);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  left: 101.7%;
+  top: -100.7%;
+  transform: scale(0);
+  transition: all .2s ease;
+  z-index: 999;
+}
+
+.main-card .main-card-info-box >  {
+  height: 50%;
+}
+
+.main-card-info {
+  display: inline-block;
+  width: 100%;
+}
+
+.main-card-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-card-info-head {
+  height: 80px;
+}
+
+.main-card-info-body {
+  height: 350px;
+}
+
+.main-card-info-footer {
+  height: 100px;
+}
+
+.card-text-btn {
+  padding: 0;
+  margin: 0;
+  background-color: var(--background-color-main-card);
+}
+
+/* main-card 끝 */
+
+/* maincard-container 시작 */
+.body-main-page-card {
+  display: inline-block;
+  background-color: var(--background-color-main-card-container);
+  height: 550px;
   width: 80vw;
-  margin-top : 10px;
-  overflow-x: auto;
+  margin: 10px 0;
   overflow-y: hidden;
   white-space: nowrap;
 }
 
-section:last-child {
-  margin-bottom: 10px;
-}
-
-footer {
-  background-color: lightpink;
-  height: 100px;
-}
-
-.card {
-  background-color: lightcoral;
+.card-container {
   display: inline-block;
-  width: 16vw; /* 카드 크기에 맞춰서 */
+  padding: 0 30.4vw;
+}
+/* maincard-container 끝 */
+
+/* category-card-container 시작 */
+.category-box {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0;
+}
+
+.category-box-item {
+  background-color: var(--background-color-list-box);
+  list-style-type: none;
+  width: 310px;
+  height: 530px;
   border: 1px solid black;
-  height: 36vh;
-  margin: 1vh calc();
 }
 
-.card_container {
+.category-box-item-sort {
   display: inline-block;
-  padding: 0 38.5%;
+  width: 100%;
+  height: 60px;
+  text-align: end;
 }
+/* category-card-container 끝 */
+
+/* list-box 시작 */
+.list-box-container {
+  width: 100%;
+  padding: 0;
+  font-size: 15px;
+  display: table;
+}
+
+.list-box-item {
+  background-color: var(--background-color-list-box);
+  /* height: 50%; */
+  border: 1px solid black;
+  align-items: center;
+}
+
+.wish-list-table th {
+  display: table-cell;
+}
+/* list-box 끝 */
+
+/* caution-box 시작 */
+.caution-box {
+  display: block;
+  background-color: var(--background-color-caution-box);
+}
+
+.caution-list {
+  color: var(--color-caution-text);
+  font-size: 15px;
+}
+/* caution-box 끝 */
+
