--- a/src/index.css
+++ b/src/index.css
@@ -1,290 +1,66 @@
-/* 색상 정의 */
-:root {
-  --background-color-main-card : violet;
-  --background-color-main-card-container : skyblue;
-  --background-color-list-box : lightgreen;
-  --background-color-text-btn : gray;
-  --background-color-caution-box : ivory;
-  --color-text-btn : white;
-  --color-caution-text : rgb(143, 143, 143);
-}
-
-/* text-btn 시작 */
-.text-btn {
-  background-color: var(--background-color-text-btn);
-  color: var(--color-text-btn);
-  padding: 5px 10px;
-  margin: 1% 0;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-/* text-btn 끝 */
-
-/* main-card 시작 */
-.main-card {
-  width: 310px; 
-  height: 530px;
-  background-color: var(--background-color-main-card);
-  border-radius: 30px;
-  position: relative;
-  display: inline-block;
-  margin: 0;
-}
-
-.main-card img {
-  width: 310px;
-  height: 530px;
-}
-
-.main-card:hover {
-  cursor: pointer;
-}
-
-.main-card:hover .main-card-info-box {
-    transform: scale(1);
-}
-
-.main-card .main-card-info-box {
-  position: relative;
-  width: 310px;
-  height: 530px;
-  background-color: var(--background-color-main-card);
+.navbar{
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  left: 101.7%;
-  top: -100.7%;
-  transform: scale(0);
-  transition: all .2s ease;
-  z-index: 999;
-}
-
-.main-card .main-card-info-box >  {
-  height: 50%;
-}
-
-.main-card-info {
-  display: inline-block;
-  width: 100%;
-}
-
-.main-card-info {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.main-card-info-head {
-  height: 80px;
-}
-
-.main-card-info-body {
-  height: 350px;
-}
-
-.main-card-info-footer {
-  height: 100px;
-}
-
-.card-text-btn {
-  padding: 0;
-  margin: 0;
-  background-color: var(--background-color-main-card);
-}
-
-/* main-card 끝 */
-
-/* maincard-container 시작 */
-.body-main-page-card {
-  display: inline-block;
-  background-color: var(--background-color-main-card-container);
-  height: 550px;
-  width: 80vw;
-  margin: 10px 0;
-  overflow-y: hidden;
-  white-space: nowrap;
-}
-
-.card-container {
-  display: inline-block;
-  padding: 0 30.4vw;
-}
-/* maincard-container 끝 */
-
-/* category-card-container 시작 */
-.category-box {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  padding: 0;
-}
-
-.category-box-item {
-  background-color: var(--background-color-list-box);
-  list-style-type: none;
-  width: 310px;
-  height: 530px;
-  border: 1px solid black;
-}
-
-.category-box-item-sort {
-  display: inline-block;
-  width: 100%;
-  height: 60px;
-  text-align: end;
-}
-/* category-card-container 끝 */
-
-/* list-box 시작 */
-.list-box-container {
-  width: 100%;
-  padding: 0;
-  font-size: 15px;
-  display: table;
-}
-
-.list-box-item {
-  background-color: var(--background-color-list-box);
-  /* height: 50%; */
-  border: 1px solid black;
-  align-items: center;
-}
-
-.wish-list-table th {
-  display: table-cell;
-}
-/* list-box 끝 */
-
-/* caution-box 시작 */
-.caution-box {
-  display: block;
-  background-color: var(--background-color-caution-box);
-}
-
-.caution-list {
-  color: var(--color-caution-text);
-  font-size: 15px;
-}
-/* caution-box 끝 */
-
-
-/*category-card 시작*/
-.category-card{
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 300px;
-}
-.category-card-text{
-  display: flex;
-  text-align: center;
-  justify-content: space-around;
-  height : 30px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.category-card div{
-  background-color: red;
-}
-/*category-card 종료*/
-
-/*input-box 시작*/
-.auth-box{
-  box-sizing: border-box;
-  width:25%;
-  position: absolute;
-  border:1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-  text-align: center;
-  min-width: 100px;
-  font-size: 15px;
-}
-.search-box{
-  position: relative;
-  width:25%;
-}
-.search-box > input{
-  box-sizing: border-box;
-  min-width: 50px;
-  width:100%;
-  min-width:30px;
-  border:1px solid #000000;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 8px;
-  text-align: center;
-  font-size: 10px;  
-}
-.search-box > img{
-  right:12px;
-  position: absolute;
-  width : 6px;
-  top:9px;
-  margin : 0;
-}
-
-/*input-box 종료*/
-
-.header {
-  background-color: skyblue;
-  display: flex;
-  height: 80px;
   justify-content: space-between;
-  align-items: center;
+  height: 60px;
+  padding: 8px 12px;
+  background-color: beige;
 }
-
-.icon {
-  width: 50px;
-  height: 50px;
-  background-color: red;
+/* 로고 */
+.navbar #logo {
+  line-height: 60px;
 }
-
-.head_menu {
+.navbar #logo img{
+  vertical-align: middle;
+}
+/* 브랜드명 */
+.navbar li{
   display: flex;
   list-style-type: none;
+  padding-left: 0;
+  font-size: 18px;
+  text-align: center;
+}
+/* 우측상단메뉴 */
+.navbar #menu {
+  float: right;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  
+}
+.navbar #menu li {
+  float:left;
+  margin-left: 50px;
+  line-height: 60px;
 }
 
-main {
-  background-color: violet;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+.navbar #menu li a {
+  text-decoration: none;
+  color: #545454 ;
+  font-size: 13px;
+  font-weight: bold;
+} 
+
+/* 배경 */
+.back{
+  background-image: url("./images/sample_01.jpg");
+  
+  /* background-color: red; */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  
 }
 
-.section1, .section2, .section3, .section4 {
-  display: inline-block;
-  background-color: lightgreen;
-  height: 38vh;
-  width: 80vw;
-  margin-top : 10px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  white-space: nowrap;
+/* footer */
+.footer{
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 80px;
+  background-color: red;
 }
-
-section:last-child {
-  margin-bottom: 10px;
-}
-
-footer {
-  background-color: lightpink;
-  height: 100px;
-}
-
-.card {
-  background-color: lightcoral;
-  display: inline-block;
-  width: 16vw; /* 카드 크기에 맞춰서 */
-  border: 1px solid black;
-  height: 36vh;
-  margin: 1vh calc();
-}
-
-.card_container {
-  display: inline-block;
-  padding: 0 38.5%;
+.footer a{
+  margin-left: 10px;
+  margin-right: 10px;
+  text-decoration: none;
 }
