--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,22 @@
 /* 색상 정의 */
 :root {
-  --background-color-main-card : violet;
-  --background-color-main-card-container : skyblue;
+  --background-color-footer-icon : violet;
+  --background-color-footer-icon-container : skyblue;
   --background-color-list-box : lightgreen;
   --background-color-text-btn : gray;
   --background-color-caution-box : ivory;
+  --background-color-footer-text: pink;
+  --background-color-login-popup-background: rgb(232, 232, 232);
   --color-text-btn : white;
   --color-caution-text : rgb(143, 143, 143);
 }
 
+body {
+  font-family: "Jua", sans-serif;
+}
+
 /* text-btn 시작 */
-.text-btn {
+.text-btn{
   background-color: var(--background-color-text-btn);
   color: var(--color-text-btn);
   padding: 5px 10px;
@@ -19,13 +25,18 @@
   text-decoration: none;
   display: inline-block;
 }
+
+.text-btn a {
+  text-decoration: none;
+  color: var(--color-text-btn);
+}
 /* text-btn 끝 */
 
 /* main-card 시작 */
 .main-card {
   width: 310px; 
   height: 530px;
-  background-color: var(--background-color-main-card);
+  background-color: var(--background-color-footer-icon);
   border-radius: 30px;
   position: relative;
   display: inline-block;
@@ -90,15 +101,14 @@
 .card-text-btn {
   padding: 0;
   margin: 0;
-  background-color: var(--background-color-main-card);
+  background-color: var(--background-color-footer-icon);
 }
-
 /* main-card 끝 */
 
 /* maincard-container 시작 */
 .body-main-page-card {
   display: inline-block;
-  background-color: var(--background-color-main-card-container);
+  background-color: var(--background-color-footer-icon-container);
   height: 550px;
   width: 80vw;
   margin: 10px 0;
@@ -167,3 +177,123 @@
   font-size: 15px;
 }
 /* caution-box 끝 */
+
+/* footer-text-btn 시작 */
+.footer-text-btn-group {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.footer-text-btn {
+  height: 20px;
+  width: 70px;
+  background-color: var(--background-color-footer-text);
+  border-radius: 20px;
+  position: relative;
+  display: inline-block;
+  margin: 10px 20px;
+}
+
+.footer-text-btn:hover {
+  cursor: pointer;
+}
+
+.footer-text-btn:hover .footer-text-btn-box {
+    transform: scale(1);
+}
+
+.footer-text-btn .footer-text-btn-box {
+  position: relative;
+  width: 200px;
+  background-color: var(--background-color-footer-text);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  top: 15%;
+  right: 15%;
+  transform: scale(0);
+  transition: all .2s ease;
+  z-index: 999;
+  border-radius: 20px;
+}
+
+.footer-text-btn-info {
+  display: inline-block;
+  width: 100%;
+}
+
+.footer-text-btn-info > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--color-text-btn);
+}
+
+.footer-text-btn-SNS ul {
+  padding: 0;
+}
+
+.footer-text-btn-SNS li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0 10px;
+  height: 100%;
+}
+
+.footer-text-btn-box img {
+width: 40px;
+height: 40px;
+}
+/* footer-text-btn 끝 */
+
+/* login-popup 시작 */
+.login-popup-background {
+  background-color: var(--background-color-login-popup-background);
+  width: calc(100% - 16px);
+  height: calc(100% - 16px);
+  opacity: 0.4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-popup {
+  background-color: var(--background-color-footer-text);
+  width: 20vw;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 5%;
+}
+
+.ID-box, .PW-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
+}
+
+.login-popup p {
+  margin: 0;
+}
+
+.auth-box-ID{
+  box-sizing: border-box;
+  width:90%;
+  height: 100%;
+  border:1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  text-align: center;
+  min-width: 100px;
+  font-size: 15px;
+}
+
+.find-btn {
+  font-size: 9px;
+}
+/* login-popup 끝 */
