--- a/src/index.css
+++ b/src/index.css
@@ -260,13 +260,12 @@ height: 40px;
 
 .login-popup {
   background-color: var(--background-color-footer-text);
-  width: 20vw;
+  width: 25vw;
   height: 60vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
-  padding-top: 5%;
 }
 
 .ID-box, .PW-box {
@@ -274,26 +273,61 @@ height: 40px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5%;
 }
 
 .login-popup p {
   margin: 0;
+  font-size: 30px;
 }
 
 .auth-box-ID{
   box-sizing: border-box;
-  width:90%;
-  height: 100%;
+  width: 100%;
+  height: 80%;
   border:1px solid #000000;
+  padding: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   text-align: center;
   min-width: 100px;
+  font-size: 20px;
+}
+
+.login-btn {
+  font-size: 20px;
+}
+
+.find-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
   font-size: 15px;
+  margin-top: 20px;
 }
 
 .find-btn {
-  font-size: 9px;
+  font-size: 15px;
+}
+
+.auto-login-btn-box, .signin-btn-box {
+  font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+
+.auto-login-toggle-btn {
+  text-align: center;
+  display: inline-block;
+  width: 70px;
+  height: 30px;
+}
+
+.signin-btn-box {
+  font-size: small;
 }
 /* login-popup 끝 */
+
