--- a/src/index.css
+++ b/src/index.css
@@ -228,63 +228,87 @@
 
 /*input-box 종료*/
 
-.header {
-  background-color: skyblue;
-  display: flex;
-  height: 80px;
-  justify-content: space-between;
-  align-items: center;
+/*button 시작*/
+
+/*전체 버튼에 적용되는 설정*/
+.btn{
+  position:relative;
+  border:none;
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 15px;
+  font-family: "paybooc-Light", sans-serif;
+  text-decoration: none;
+  font-weight: 600;
+  transition:0.25s;
+}
+.btn:active{
+  transform:scale(1.3);
+}
+.btn:hover{
+  letter-spacing: 2px;
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
-.icon {
-  width: 50px;
+/* login, logout, 회원가입 버튼에 적용되는 설정 */
+.auth-btn{
+  background-color: #443fc1;
+  color: #000000;
+}
+.auth-btn:hover {
+  background-color: #6aafe6;
+  color: #d4dfe6;
+}
+.search-btn{
+  width:80px;
+}
+.search-btn > img{
+  display: block;
+  width: 100%;
+  height:auto;
+}
+.toggleSwitch {
+  width: 100px;
   height: 50px;
-  background-color: red;
-}
-
-.head_menu {
-  display: flex;
-  list-style-type: none;
-}
-
-main {
-  background-color: violet;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  display: block;
+  position: relative;
+  border-radius: 30px;
   align-items: center;
+  background-color: #fff;
+  box-shadow: 0 0 3px 3px rgba(0 0 0 / 15%);
+  cursor: pointer;
+  margin: 15px;
 }
 
-.section1, .section2, .section3, .section4 {
-  display: inline-block;
-  background-color: lightgreen;
-  height: 38vh;
-  width: 80vw;
-  margin-top : 10px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  white-space: nowrap;
+.off-button{}
+
+.toggleSwitch .toggleButton {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background: #000000;
 }
 
-section:last-child {
-  margin-bottom: 10px;
+#toggle:checked ~ .toggleSwitch {
+  background: #000000;
 }
 
-footer {
-  background-color: lightpink;
-  height: 100px;
+#toggle:checked ~ .toggleSwitch .toggleButton {
+  left: calc(100% - 44px);
+  background: #fff;
 }
 
-.card {
-  background-color: lightcoral;
-  display: inline-block;
-  width: 16vw; /* 카드 크기에 맞춰서 */
-  border: 1px solid black;
-  height: 36vh;
-  margin: 1vh calc();
+.toggleSwitch, .toggleButton {
+  transition: all 0.2s ease-in;
 }
 
-.card_container {
-  display: inline-block;
-  padding: 0 38.5%;
+.nav-btn{
+  background: #0821db;
+  color:#fff;
 }
+/*button 종료*/
