--- a/src/index.css
+++ b/src/index.css
@@ -276,6 +276,8 @@ height: 40px;
 }
 
 .login-popup p {
+  display: flex;
+  justify-content: center;
   margin: 0;
   font-size: 30px;
 }
@@ -283,7 +285,7 @@ height: 40px;
 .auth-box-ID{
   box-sizing: border-box;
   width: 100%;
-  height: 80%;
+  height: 70%;
   border:1px solid #000000;
   padding: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -330,3 +332,41 @@ height: 40px;
   font-size: small;
 }
 /* login-popup 끝 */
+
+.toggleSwitch {
+  width: 100%;
+  height: 30px;
+  display: block;
+  position: relative;
+  border-radius: 30px;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0 0 3px 3px rgba(0 0 0 / 15%);
+  cursor: pointer;
+}
+
+.off-button{}
+
+.toggleSwitch .toggleButton {
+  width: 40%;
+  height: 90%;
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background: #000000;
+}
+
+#toggle:checked ~ .toggleSwitch {
+  background: #000000;
+}
+
+#toggle:checked ~ .toggleSwitch .toggleButton {
+  left: calc(100% - 32px);
+  background: #fff;
+}
+
+.toggleSwitch, .toggleButton {
+  transition: all 0.2s ease-in;
+}
