--- a/src/index.css
+++ b/src/index.css
@@ -285,7 +285,7 @@ height: 40px;
 .auth-box-ID{
   box-sizing: border-box;
   width: 100%;
-  height: 70%;
+  height: 60%;
   border:1px solid #000000;
   padding: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -345,8 +345,6 @@ height: 40px;
   cursor: pointer;
 }
 
-.off-button{}
-
 .toggleSwitch .toggleButton {
   width: 40%;
   height: 90%;
@@ -369,4 +367,29 @@ height: 40px;
 
 .toggleSwitch, .toggleButton {
   transition: all 0.2s ease-in;
+}
+
+.auth-btn{
+  background-color: #443fc1;
+  color: #000000;
+}
+
+.auth-btn:hover {
+  background-color: #6aafe6;
+  color: #d4dfe6;
+}
+
+.search-btn{
+  width:80px;
+}
+
+.search-btn > img{
+  display: block;
+  width: 100%;
+  height:auto;
+}
+
+.nav-btn{
+  background: #0821db;
+  color:#fff;
 }
