--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ body {
   font-family: "Jua", sans-serif;
 }
 
+.main-page {
+  background-image: url(./img/background.svg);
+  background-position: center;
+  background-size: cover;
+}
+
 /* text-btn 시작 */
 .text-btn{
   background-color: var(--background-color-text-btn);
