Jun main page jakupjung

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 body {
   font-family: "Jua", sans-serif;
+  overflow: hidden;
 }
 
 .main-page {
@@ -116,7 +117,7 @@ body {
   display: inline-block;
   background-color: var(--background-color-footer-icon-container);
   height: 550px;
-  width: 80vw;
+  width: 100vw;
   margin: 10px 0;
   overflow-y: hidden;
   white-space: nowrap;
@@ -184,7 +185,7 @@ body {
 }
 /* caution-box 끝 */
 
-/* footer-text-btn 시작 */
+/* footer-text-botton 시작 */
 .footer-text-btn-group {
   display: flex;
   justify-content: space-around;
@@ -210,13 +211,11 @@ body {
 
 .footer-text-btn .footer-text-btn-box {
   position: relative;
-  width: 200px;
+  width: 300%;
   background-color: var(--background-color-footer-text);
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  top: 15%;
-  right: 15%;
   transform: scale(0);
   transition: all .2s ease;
   z-index: 999;
@@ -226,6 +225,21 @@ body {
 .footer-text-btn-info {
   display: inline-block;
   width: 100%;
+}
+
+.footer-text-btn-CS {
+  bottom: 650%;
+  right: 15%;
+}
+
+.footer-text-btn-SNS {
+  bottom: 500%;
+  right: 15%;
+}
+
+.footer-text-btn-AboutUs {
+  bottom: 1000%;
+  right: 15%;
 }
 
 .footer-text-btn-info > a {
@@ -243,7 +257,7 @@ body {
 .footer-text-btn-SNS li {
   list-style-type: none;
   display: inline-block;
-  margin: 0 10px;
+  margin: 0 auto;
   height: 100%;
 }
 
@@ -251,7 +265,7 @@ body {
 width: 40px;
 height: 40px;
 }
-/* footer-text-btn 끝 */
+/* footer-text-botton 끝 */
 
 /* login-popup 시작 */
 .login-popup-background {
@@ -538,12 +552,9 @@ navbar{
 /* footer */
 .footer{
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 80px;
-  background-color: red;
+  margin-top: 20px auto;
 }
 .footer a{
-  margin-left: 10px;
-  margin-right: 10px;
+  margin:0 10px;
   text-decoration: none;
 }
