--- a/src/components/category-card.html
+++ b/src/components/category-card.html
@@ -1,7 +1,7 @@
-<section class="category-card">
+<li class="category-box-item">
   <img src="./img/shoes.svg" alt="" class="category-card-img">
   <div class="category-card-text">
     <div class="card-price">100만원</div>
     <div class="card-name">신발이름!</div>
   </div>
-</section>
+</li>
