--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,27 @@
 
 body {
   font-family: "Jua", sans-serif;
-  overflow: hidden;
 }
 
 .main-page {
   background-image: url(./img/background.svg);
   background-position: center;
   background-size: cover;
+}
+
+.main-page-text-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 500px;
+}
+
+.main-page-text {
+  font-size: 80px;
+  color: white;
+  margin: 0;
 }
 
 /* text-btn 시작 */
@@ -49,6 +63,7 @@ body {
   display: inline-block;
   margin: 0;
 }
+
 
 .main-card img {
   width: 310px;
@@ -112,20 +127,32 @@ body {
 }
 /* main-card 끝 */
 
-/* maincard-container 시작 */
+/* main-card-container 시작 */
 .body-main-page-card {
   display: inline-block;
-  background-color: var(--background-color-footer-icon-container);
   height: 550px;
-  width: 100vw;
+  width: 100%;
   margin: 10px 0;
   overflow-y: hidden;
   white-space: nowrap;
 }
 
+.main-card-container {
+  margin: 20px 0;
+}
+
+.main-card-container::-webkit-scrollbar {
+  height: 15px;
+}
+
+.main-card-container::-webkit-scrollbar-thumb {
+  background-color: hsla(216, 100%, 81%, 0.29);
+  border-radius: 7.5px;
+}
+
 .card-container {
   display: inline-block;
-  padding: 0 30.4vw;
+  padding: 0 40%;
 }
 /* maincard-container 끝 */
 
@@ -495,48 +522,69 @@ height: 40px;
 }
 /*input-box 종료*/
 
-navbar{
+.nav-bar{
   display: flex;
   justify-content: space-between;
   height: 60px;
-  padding: 8px 12px;
-  background-color: beige;
+  padding: 8px 0;
+  width: 100%;
 }
 /* 로고 */
-.navbar #logo {
+.nav-bar #logo {
   line-height: 60px;
 }
-.navbar #logo img{
+.nav-bar #logo img{
   vertical-align: middle;
 }
 /* 브랜드명 */
-.navbar li{
+.center {
   display: flex;
-  list-style-type: none;
-  padding-left: 0;
-  font-size: 18px;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
+.comp-name{
+  list-style-type: none;
+  padding: 0;
+  font-size: 40px;
+  text-align: center;
+  color: white;
+  position: relative;
+  left: 50%;
+}
+
 /* 우측상단메뉴 */
-.navbar #menu {
+.nav-bar #menu {
   float: right;
   list-style: none;
   padding: 0;
   margin: 0;
   
 }
-.navbar #menu li {
+.nav-bar #menu li {
   float:left;
-  margin-left: 50px;
   line-height: 60px;
 }
 
-.navbar #menu li a {
+#menu :not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav-bar #menu li a {
   text-decoration: none;
   color: #545454 ;
   font-size: 13px;
   font-weight: bold;
 } 
+
+.nav-bar > a {
+  width: 5%;
+  height: auto;
+}
+
+.nav-bar img {
+  width: 100%;
+  height: 100%;
+}
 
 /* 배경 */
 .back{
