--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 .main-page {
   background-image: url(./img/background.svg);
   background-position: center;
-  background-size: cover;
+  background-size: auto;
 }
 
 .main-page-text-box {
@@ -61,7 +61,7 @@ body {
   border-radius: 30px;
   position: relative;
   display: inline-block;
-  margin: 0;
+  margin: 0 10px;
 }
 
 
@@ -86,8 +86,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  left: 101.7%;
-  top: -100.7%;
+  left: 108%;
+  top: -100.9%;
   transform: scale(0);
   transition: all .2s ease;
   z-index: 999;
@@ -265,7 +265,7 @@ body {
 }
 
 .footer-text-btn-AboutUs {
-  bottom: 1000%;
+  bottom: 970%;
   right: 15%;
 }
 
@@ -295,24 +295,48 @@ height: 40px;
 /* footer-text-botton 끝 */
 
 /* login-popup 시작 */
-.login-popup-background {
+.login-popup-background, .signin-popup-background {
   background-color: var(--background-color-login-popup-background);
-  width: calc(100% - 16px);
-  height: calc(100% - 16px);
-  opacity: 0.4;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+	top: 0;
+	left: 0;
+  width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s, opacity 0.3s ease;
+  z-index: 999;
 }
 
 .login-popup {
-  background-color: var(--background-color-footer-text);
+  background-color: var(--background-color-caution-box);
+  border-radius: 1vw;
   width: 25vw;
   height: 60vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  transition: visibility 0s, opacity 0.3s ease;
+}
+
+.signin-popup {
+  background-color: var(--background-color-caution-box);
+  border-radius: 1vw;
+  width: 25vw;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: visibility 0s, opacity 0.3s ease;
+}
+
+.signin-popup :not(:first-child) {
+  margin-top: 10px;
 }
 
 .ID-box, .PW-box {
@@ -347,40 +371,49 @@ height: 40px;
 }
 
 .find-box {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   font-size: 15px;
-  margin-top: 20px;
 }
 
-.find-btn {
-  font-size: 15px;
+.find-btn-box {
+  display: flex;
+  align-items: center;
 }
 
 .auto-login-btn-box, .signin-btn-box {
+  position: relative;
   font-size: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin: 10px 0;
 }
 
 .auto-login-toggle-btn {
+  position: relative;
+  right: 40%;
   text-align: center;
   display: inline-block;
-  width: 70px;
-  height: 30px;
+  width: 10%;
+  height: 5%;
+  margin: 0;
+}
+
+.auto-login-btn-box .toggleSwitch {
+  margin: 0;
 }
 
 .signin-btn-box {
   font-size: small;
 }
 /* login-popup 끝 */
-/*button 시작*/
 
+/*button 시작*/
 /*전체 버튼에 적용되는 설정*/
 .btn{
   position:relative;
@@ -388,63 +421,60 @@ height: 40px;
   display: inline-block;
   padding: 15px 30px;
   border-radius: 15px;
-  font-family: "paybooc-Light", sans-serif;
   text-decoration: none;
   font-weight: 600;
   transition:0.25s;
+  text-align: center;
 }
-.btn:active{
-  transform:scale(1.3);
-}
-.btn:hover{
-  letter-spacing: 2px;
-  transform: scale(1.1);
-  cursor: pointer;
-}
-/*button 시작*/
 
-/*전체 버튼에 적용되는 설정*/
-.btn{
-  position:relative;
-  border:none;
-  display: inline-block;
-  padding: 15px 30px;
-  border-radius: 15px;
-  font-family: "paybooc-Light", sans-serif;
+.find-btn .btn, .signin-btn-box .btn {
+  color: green;
+  padding: 5px 10px;
+  margin: 1% 0;
   text-decoration: none;
-  font-weight: 600;
-  transition:0.25s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .btn:active{
   transform:scale(1.3);
 }
+
 .btn:hover{
   letter-spacing: 2px;
   transform: scale(1.1);
   cursor: pointer;
 }
+
 /* login, logout, 회원가입 버튼에 적용되는 설정 */
 .auth-btn{
   background-color: #443fc1;
   color: #000000;
 }
+
 .auth-btn:hover {
   background-color: #6aafe6;
   color: #d4dfe6;
 }
+
 .search-btn{
   align-items: center;
+  height: 100%;
 }
+
 .search-btn > img{
-  display: block;
-  width: 100%;
+  display: inline-block;
+  height: 100%;
   align-items: center;
 }
+
 .toggleSwitch {
-  width: 100px;
-  height: 50px;
+  width: 80px;
+  height: 30px;
   display: block;
   position: relative;
+  right: inherit;
   border-radius: 30px;
   align-items: center;
   background-color: #fff;
@@ -454,8 +484,8 @@ height: 40px;
 }
 
 .toggleSwitch .toggleButton {
-  width: 40%;
-  height: 90%;
+  width: 30%;
+  height: 80%;
   position: absolute;
   top: 50%;
   left: 4px;
@@ -469,7 +499,7 @@ height: 40px;
 }
 
 #toggle:checked ~ .toggleSwitch .toggleButton {
-  left: calc(100% - 32px);
+  left: calc(100% - 30px);
   background: #fff;
 }
 
@@ -481,6 +511,12 @@ height: 40px;
   background: #0821db;
   color:#fff;
 }
+
+.pop-close-btn > div {
+  padding: 0;
+  background-color: #000000;
+}
+
 /*button 종료*/
 
 /*input-box 시작*/
@@ -524,66 +560,57 @@ height: 40px;
 
 .nav-bar{
   display: flex;
-  justify-content: space-between;
   height: 60px;
   padding: 8px 0;
   width: 100%;
 }
+
+.nav-bar-items {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-bar-comp-name {
+  font-size: 40px;
+  color: var(--color-text-btn);
+}
+
+.nav-bar-menu {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 /* 로고 */
-.nav-bar #logo {
-  line-height: 60px;
+.nav-bar-logo {
+  display: inline-block;
+  height: 100%;
+  width: 60px;
+  margin-left: 2%;
 }
-.nav-bar #logo img{
-  vertical-align: middle;
+
+.nav-bar-logo img{
+  display: inline-block;
+  height: 100%;
+  width: 100%;
 }
+
 /* 브랜드명 */
 .center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.comp-name{
-  list-style-type: none;
-  padding: 0;
-  font-size: 40px;
-  text-align: center;
+.nav-bar-comp-name > a{
   color: white;
-  position: relative;
-  left: 50%;
 }
 
 /* 우측상단메뉴 */
-.nav-bar #menu {
-  float: right;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  
-}
-.nav-bar #menu li {
-  float:left;
-  line-height: 60px;
-}
-
-#menu :not(:last-child) {
-  margin-right: 50px;
-}
-
-.nav-bar #menu li a {
-  text-decoration: none;
-  color: #545454 ;
-  font-size: 13px;
-  font-weight: bold;
-} 
-
-.nav-bar > a {
-  width: 5%;
-  height: auto;
-}
-
-.nav-bar img {
-  width: 100%;
-  height: 100%;
+.nav-bar-menu :not(:first-child){
+  margin-left: 3%;
 }
 
 /* 배경 */
