--- a/src/components/maincard-container.html
+++ b/src/components/maincard-container.html
@@ -1,9 +1,11 @@
 <section class="body-main-page-card main-card-container">
   <div class="card-container">
     <div class="main-card">
-      <img src="./img/shoes1.png" alt="shoes1">
+      <a href="./category.html">
+        <img src="./img/shoes1.png" alt="shoes1">
+      </a>
       <div class="main-card-info-box">
-        <a href="#" class="text-btn card-text-btn">
+        <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
             headinfo1
           </div>
@@ -17,11 +19,13 @@
       </div>
     </div>
     <div class="main-card">
-      <img src="./img/shoes1.png" alt="shoes1">
+      <a href="./category.html">
+        <img src="./img/shoes1.png" alt="shoes1">
+      </a>
       <div class="main-card-info-box">
-        <a href="#" class="text-btn card-text-btn">
+        <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo2
+            headinfo1
           </div>
           <div class="main-card-info main-card-info-body">
             bodyinfo
@@ -33,11 +37,13 @@
       </div>
     </div>
     <div class="main-card">
-      <img src="./img/shoes1.png" alt="shoes1">
+      <a href="./category.html">
+        <img src="./img/shoes1.png" alt="shoes1">
+      </a>
       <div class="main-card-info-box">
-        <a href="#" class="text-btn card-text-btn">
+        <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo3
+            headinfo1
           </div>
           <div class="main-card-info main-card-info-body">
             bodyinfo
@@ -49,11 +55,13 @@
       </div>
     </div>
     <div class="main-card">
-      <img src="./img/shoes1.png" alt="shoes1">
+      <a href="./category.html">
+        <img src="./img/shoes1.png" alt="shoes1">
+      </a>
       <div class="main-card-info-box">
-        <a href="#" class="text-btn card-text-btn">
+        <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo4
+            headinfo1
           </div>
           <div class="main-card-info main-card-info-body">
             bodyinfo
@@ -65,11 +73,13 @@
       </div>
     </div>
     <div class="main-card">
-      <img src="./img/shoes1.png" alt="shoes1">
+      <a href="./category.html">
+        <img src="./img/shoes1.png" alt="shoes1">
+      </a>
       <div class="main-card-info-box">
-        <a href="#" class="text-btn card-text-btn">
+        <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo5
+            headinfo1
           </div>
           <div class="main-card-info main-card-info-body">
             bodyinfo
@@ -81,11 +91,13 @@
       </div>
     </div>
     <div class="main-card">
-      <img src="./img/shoes1.png" alt="shoes1">
+      <a href="./category.html">
+        <img src="./img/shoes1.png" alt="shoes1">
+      </a>
       <div class="main-card-info-box">
-        <a href="#" class="text-btn card-text-btn">
+        <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo6
+            headinfo1
           </div>
           <div class="main-card-info main-card-info-body">
             bodyinfo
