--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@
 :root {
   --background-color-main-page: rgba(144, 238, 144, 0.66);
   --background-color-footer-icon : violet;
-  --background-color-footer-icon-container : skyblue;
   --background-color-list-box : lightgreen;
   --background-color-text-btn : gray;
   --background-color-caution-box : ivory;
   --background-color-footer-text: pink;
   --background-color-login-popup-background: rgb(232, 232, 232);
   --background-color-popup-background: rgba(0, 0, 0, 0.5);
+  --background-color-main-card: rgba(36, 168, 36, 0.516);
   --color-text-btn : white;
   --color-caution-text : rgb(143, 143, 143);
 }
@@ -61,7 +61,6 @@ body {
 .main-card {
   width: 310px; 
   height: 530px;
-  background-color: var(--background-color-footer-icon);
   border-radius: 30px;
   position: relative;
   display: inline-block;
@@ -86,7 +85,7 @@ body {
   position: relative;
   width: 310px;
   height: 530px;
-  background-color: var(--background-color-main-card);
+  background-color: white;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -95,10 +94,6 @@ body {
   transform: scale(0);
   transition: all .2s ease;
   z-index: 999;
-}
-
-.main-card .main-card-info-box >  {
-  height: 50%;
 }
 
 .main-card-info {
@@ -114,10 +109,14 @@ body {
 
 .main-card-info-head {
   height: 80px;
+  font-size: 30px;
 }
 
 .main-card-info-body {
   height: 350px;
+  display: inline-block;
+  flex-wrap: wrap;
+  overflow: auto;
 }
 
 .main-card-info-footer {
@@ -127,7 +126,7 @@ body {
 .card-text-btn {
   padding: 0;
   margin: 0;
-  background-color: var(--background-color-footer-icon);
+  background-color: var(--background-color-main-card);
 }
 /* main-card 끝 */
 
@@ -282,17 +281,17 @@ body {
 }
 
 .footer-text-btn-CS {
-  bottom: 650%;
+  bottom: 100px;
   right: 15%;
 }
 
 .footer-text-btn-SNS {
-  bottom: 480%;
+  bottom: 70px;
   right: 15%;
 }
 
 .footer-text-btn-AboutUs {
-  bottom: 440%;
+  bottom: 60px;
   right: 15%;
 }
 
@@ -355,7 +354,7 @@ height: 40px;
     background-color: var(--background-color-caution-box);
     border-radius: 1vw;
     width: 25vw;
-    height: 60vh;
+    height: 520px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
