뭘 바꾼거지

--- a/src/components/main-card.html
+++ b/src/components/main-card.html
@@ -1,15 +1,20 @@
 <div class="main-card">
-  <img src="./img/shoes1.png" alt="shoes1">
+  <a href="./category.html">
+    <img src="./img/shoes1.png" alt="shoes1">
+  </a>
   <div class="main-card-info-box">
-    <a href="#" class="text-btn card-text-btn">
+    <a href="./category.html" class="text-btn card-text-btn">
       <div class="main-card-info main-card-info-head">
-        headinfo
+        에어포스 1
       </div>
       <div class="main-card-info main-card-info-body">
-        bodyinfo
+        <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+        <div class="colors">
+          RED BLACK WHITE IVORY
+        </div>
       </div>
       <div class="main-card-info main-card-info-footer">
-        footinfo
+        136,000깃털
       </div>
     </a>
   </div>
