--- a/src/components/maincard-container.html
+++ b/src/components/maincard-container.html
@@ -7,13 +7,16 @@
       <div class="main-card-info-box">
         <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo1
+            에어포스 1
           </div>
           <div class="main-card-info main-card-info-body">
-            bodyinfo
+            <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+            <div class="colors">
+              RED BLACK WHITE IVORY
+            </div>
           </div>
           <div class="main-card-info main-card-info-footer">
-            footinfo
+            136,000깃털
           </div>
         </a>
       </div>
@@ -25,13 +28,16 @@
       <div class="main-card-info-box">
         <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo1
+            에어포스 1
           </div>
           <div class="main-card-info main-card-info-body">
-            bodyinfo
+            <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+            <div class="colors">
+              RED BLACK WHITE IVORY
+            </div>
           </div>
           <div class="main-card-info main-card-info-footer">
-            footinfo
+            136,000깃털
           </div>
         </a>
       </div>
@@ -43,13 +49,16 @@
       <div class="main-card-info-box">
         <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo1
+            에어포스 1
           </div>
           <div class="main-card-info main-card-info-body">
-            bodyinfo
+            <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+            <div class="colors">
+              RED BLACK WHITE IVORY
+            </div>
           </div>
           <div class="main-card-info main-card-info-footer">
-            footinfo
+            136,000깃털
           </div>
         </a>
       </div>
@@ -61,13 +70,16 @@
       <div class="main-card-info-box">
         <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo1
+            에어포스 1
           </div>
           <div class="main-card-info main-card-info-body">
-            bodyinfo
+            <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+            <div class="colors">
+              RED BLACK WHITE IVORY
+            </div>
           </div>
           <div class="main-card-info main-card-info-footer">
-            footinfo
+            136,000깃털
           </div>
         </a>
       </div>
@@ -79,13 +91,16 @@
       <div class="main-card-info-box">
         <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo1
+            에어포스 1
           </div>
           <div class="main-card-info main-card-info-body">
-            bodyinfo
+            <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+            <div class="colors">
+              RED BLACK WHITE IVORY
+            </div>
           </div>
           <div class="main-card-info main-card-info-footer">
-            footinfo
+            136,000깃털
           </div>
         </a>
       </div>
@@ -97,16 +112,19 @@
       <div class="main-card-info-box">
         <a href="./category.html" class="text-btn card-text-btn">
           <div class="main-card-info main-card-info-head">
-            headinfo1
+            에어포스 1
           </div>
           <div class="main-card-info main-card-info-body">
-            bodyinfo
+            <div class="sizes">240 245 250 255 260 265 270 275 280 285</div>
+            <div class="colors">
+              RED BLACK WHITE IVORY
+            </div>
           </div>
           <div class="main-card-info main-card-info-footer">
-            footinfo
+            136,000깃털
           </div>
         </a>
       </div>
-    </div>
+    </div>  
   </div>
 </section>
