--- a/src/index.css
+++ b/src/index.css
@@ -386,6 +386,14 @@ height: 40px;
   align-items: center;
 }
 
+.signin-popup {
+  justify-content: flex-start;
+}
+
+.signin-popup > * {
+  margin-top: 10px;
+}
+
 .login-popup p, .signin-popup p {
   display: flex;
   justify-content: center;
