--- a/src/item-page.css
+++ b/src/item-page.css
@@ -1,12 +1,31 @@
+/* 색상 정의 */
+:root {
+  --background-color-main-page: rgba(144, 238, 144, 0.66);
+  --background-color-footer-icon : violet;
+  --background-color-list-box : lightgreen;
+  --background-color-text-btn : gray;
+  --background-color-caution-box : ivory;
+  --background-color-footer-text: rgb(84, 44, 24);
+  --background-color-login-popup-background: rgb(232, 232, 232);
+  --background-color-popup-background: rgba(0, 0, 0, 0.5);
+  --background-color-main-card: rgba(36, 168, 36, 0.516);
+  --background-color-tree-brown: rgb(84, 44, 24);
+  --color-text-btn : white;
+  --color-caution-text : rgb(143, 143, 143);
+  --color-btn: #20ad45;
+}
+
 body {
   font-family: "Jua", sans-serif;
 }
 /* item-top-container */
 .item-top-container{
-  background-color: rgb(84, 82, 82);
   padding: 20px;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  border: 4px solid var(--background-color-tree-brown);
+  border-radius: 20px;
 }
 
 /* item-top-container 좌측 */
@@ -44,48 +63,76 @@ body {
   align-items: center;
   width: 400px;
   height: 550px;
-  background-color: rgb(177, 172, 172);
+  background-color: var(--background-color-tree-brown);
   text-align: center;
   color: antiquewhite;
 }
+
 .size-option{
   display: flex;
   flex-wrap:  wrap;
   justify-content: center;
   width:350px;
-  border: 1px solid white;
 }
 .size-option-btn{
   width: 100px;
   height: 40px;
-  border-radius: 10%;
+  border-radius: 10px;
   margin: 2px 2px;
+}
+
+.selectedcolor-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .color-option{
   display: flex;
   align-items: center;
-  border : 1px solid white;
   width: 350px;
   justify-content: space-around;
 }
+
 .color-option > input{
   width:180px;
 }
+
+#changedColor {
+  margin-left: 10px;
+  width: 50px;
+  height: 20px;
+  border: 2px solid var(--background-color-main-card);
+  border-radius: 10px;
+}
+
 .chosen-option{
-  margin-top: 30px;
-  border : 1px solid white;
+  margin-top: 15px;;
   width: 350px;
 }
 
 .decision{
   display: flex;
   justify-content: space-around;
-  margin-top: 30px;
+  margin-top: 15px;
   width:350px;
-  border : 1px solid white;
+  padding: 10px 0;
 }
 
-.decision > img{
+.like-btn {
+  background-color: var(--background-color-tree-brown);
+  border: var(--background-color-tree-brown);
+}
+
+.like-btn:hover {
+  cursor: pointer;
+}
+
+.bibi-heart.fill {
+  color: red;
+}
+
+.decision img, .decision svg{
+  color: var(--color-btn);
   width: 50px;
   height : 50px;
 }
