--- a/src/cart-page.css
+++ b/src/cart-page.css
@@ -19,13 +19,71 @@ body * {
   font-family: "Jua", sans-serif;
 }
 
+/* nav-bar 시작 */
 .nav-bar{
   display: flex;
   height: 60px;
   padding: 8px 0;
   width: 100%;
-  background-color: red;
 }
+
+.nav-bar-items {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-bar-comp-name {
+  font-size: 40px;
+  color: var(--color-text-btn);
+}
+
+.nav-bar-menu {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-btn{
+  background: #08db40;
+  color:#fff;
+  font-size: 16px;
+}
+
+.search-popup > .btn {
+  position: absolute;
+  right: 2%;
+}
+
+.search-box{
+  position: relative;
+  width:100%;
+  height: 100%;
+}
+
+#search-input{
+  height: 100%;
+  box-sizing: border-box;
+  width:100%;
+  min-width:30px;
+  border:1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  text-align: center;
+  font-size: 160%;  
+}
+
+.search-box img{
+  right:12px;
+  position: absolute;
+  height: 80%;
+  top:9px;
+  margin : 0;
+}
+/* nav-bar 종료 */
+
 .list-box-container {
   width: 100%;
   padding: 0;
