배포 시도 1차 실패

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1393,7 +1393,7 @@ height: 40px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: url(/src/img/mail.jpeg);
+  background-image: url(../img/mail.jpeg);
   width:100%;
   height: 100%;
   
